--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -44,6 +44,70 @@
         ]
     },
     {
+        "id":"ddns-cpanel",
+        "name":"BIND DDNS CPanel",
+        "date":"2022-09",
+        "source":"portfolio",
+        "thumbnail":"https://actuallyadequate.github.io/ddns-cpanel/documentation/zoneview.png",
+        "github":"https://github.com/ActuallyAdequate/ddns-cpanel",
+        "description":"This DDNS control panel was a project to demonstrate understanding of the network services, BIND and Apache, aswell as the FreeBSD OS. The control panel allows for the creation and management of DNS zones and records for different users, and controls access to the zones based on permissions. The solution also involved the developement of CLI tools to create accounts, zone records, and load multiple zones from a CSV file.",
+        "assets": [
+            {
+                "type":"links",
+                "links": [
+                    ["github", "https://github.com/ActuallyAdequate/ddns-cpanel"]
+                ]
+            },
+            {
+                "type": "pdf",
+                "title": "DDNS Documentation",
+                "link":"https://actuallyadequate.github.io/ddns-cpanel/documentation/DNSDocumentation.pdf"
+            }
+        ],
+        "skills": [
+            "os-freebsd",
+            "network-bind",
+            "web-apache",
+            "language-php"
+        ]
+    }, 
+    {
+        "id": "medicaldatabase",
+        "name": "Medical DB Security",
+        "date": "2021-10",
+        "source": "portfolio",
+        "thumbnail": "https://actuallyadequate.github.io/medicaldatabase/thumbnail.png",
+        "github": "https://github.com/ActuallyAdequate/medicaldatabase",
+        "description": "This is a datastore for a mock medical service. It holds user account information, as well as a records of appointments made, patient information, and employee information such as salary work hours etc. Main use cases for the datastore will be for users requesting their appointment details, medical professionals requesting patient information, and managers requesting employee data. The database is a relational database in MYSQL.",
+        "assets" : [
+            {
+                "type": "links",
+                "links": [["github","https://github.com/ActuallyAdequate/medicaldatabase"]]
+            },
+            {
+                "type": "video",
+                "code": "JZ_8wgXUEV0"
+            },
+            {
+                "type": "pdf",
+                "title": "Datastore Design",
+                "link": "https://actuallyadequate.github.io/medicaldatabase/datadesign.pdf"
+            }, 
+            {
+                "type": "pdf",
+                "title": "Data Security Research",
+                "link": "https://actuallyadequate.github.io/medicaldatabase/dbsecresearch.pdf"
+            }
+        ],
+        "skills": [
+            "language-mysql",
+            "language-php",
+            "web-html",
+            "web-apache",
+            "policy-secpol"
+        ]
+    },
+    {
         "id": "valency",
         "name" : "Valency (A Chemistry Game)",
         "date": "2020-12",
@@ -65,6 +129,7 @@
             },
             {
                 "type":"screenshot",
+                "width":"75%",
                 "src":"https://raw.githubusercontent.com/ActuallyAdequate/valency/main/Assets/Art/valency_screenshot.png",
                 "alt":"Valency Game Screenshots"
             }
